--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>名称未設定</title>
+    <title>SV41</title>
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
@@ -17,7 +17,7 @@
 
   <body>
 
-    
+    <h1>IH14203鳥脇啓汰</h1>
 
   </body>
 
